Fixed-View-and-Edit-Cart-link-not-aligned-in-middle

--- a/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Magento/luma/Magento_Checkout/web/css/source/module/_minicart.less
@@ -211,7 +211,7 @@
         }
 
         .minicart-widgets {
-            margin-top: 0px;
+            margin-top: 15px;
         }
     }
 
